--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -1,9 +1,11 @@
 {% load socialaccount %}
 
 
-<h1>РЕГИСТРАЦИЯ</h1>
+<h1>Привет</h1>
 {% if user.is_authenticated %}
+
     <p>Добро пожаловать {{ user.username }} !!!</p>
 {% else %}
     <a href="{% url 'account_signup' %}">Зарегистрируйтесь по почте</a>
 {% endif %}
+
