--- a/app/templates/announcements/list.html
+++ b/app/templates/announcements/list.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Список объявлений</title>
-    <!-- Подключите необходимые CSS, например Bootstrap, если требуется -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
@@ -13,10 +12,10 @@
         {% if announcements %}
             <div class="list-group">
                 {% for announcement in announcements %}
-                    <a href="{% url 'announcement_detail' announcement.pk %}" class="list-group-item list-group-item-action">
+                    <a href="{% url 'announcement-detail' announcement.pk %}" class="list-group-item list-group-item-action">
                         <h5 class="mb-1">{{ announcement.title }}</h5>
                         <p class="mb-1">{{ announcement.content|truncatewords:20 }}</p>
-                        <small>Категория: {{ announcement.get_category_display }}</small>
+                        <small>Категория: {{ announcement.category.name }}</small>
                     </a>
                 {% endfor %}
             </div>
@@ -24,9 +23,43 @@
             <p>Нет объявлений.</p>
         {% endif %}
     </div>
-    <!-- Подключите необходимые JS, например jQuery и Bootstrap JS, если требуется -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{% block title %}{% endblock %}</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        .home-button {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            text-decoration: none;
+            font-size: 16px;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        .home-button:hover {
+            background-color: #0056b3;
+        }
+    </style>
+</head>
+<body>
+    <a href="{% url 'home' %}" class="home-button">Главная</a>
+    {% block content %}
+    {% endblock %}
+</body>
+</html>
+
+
+
+
+
