--- a/app/templates/app/detail.html
+++ b/app/templates/app/detail.html
@@ -6,5 +6,6 @@
 <body>
     <h1>{{ ad.title }}</h1>
     <a href="{% url 'edit_ad' ad.id %}">Редактировать</a>
+    <!-- Другие элементы шаблона -->
 </body>
 </html>
