--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -57,7 +57,7 @@
             <p>Добро пожаловать на доску объявлений, {{ user.username }}!</p>
             <a href="{% url 'announcement-create' %}" class="button">Создать объявление</a>
             <a href="{% url 'announcement-list' %}" class="button">Перейти к списку объявлений</a>
-            <a href="{% url 'profile' %}" class="button">Мой профиль</a>
+            <a href="{% url 'response-list' %}" class="button">Мои отклики</a>
 
         {% else %}
             <p>Пожалуйста, <a href="{% url 'account_signup' %}">зарегистрируйтесь</a>, чтобы создать объявление.</p>
