--- a/app/templates/responses/response_management.html
+++ b/app/templates/responses/response_management.html
@@ -1,5 +1,3 @@
-<!-- templates/responses/response_management.html -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -32,7 +30,7 @@
                 {% for response in responses %}
                     <div class="list-group-item">
                         <h5 class="mb-1">{{ response.announcement.title }}</h5>
-                        <p class="mb-1">{{ response.content }}</p>
+                        <p class="mb-1">{{ response.message }}</p>
                         <small>Автор: {{ response.user.username }}, Дата: {{ response.created_at }}</small>
                         <div class="mt-2">
                             <a href="{% url 'accept-response' response.id %}" class="btn btn-success btn-sm">Принять</a>
