--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -1,3 +1,4 @@
+{% load static %}
 {% load socialaccount %}
 
 <!DOCTYPE html>
@@ -6,66 +7,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Доска объявлений</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <style>
-        .button {
-            display: inline-block;
-            background-color: #4CAF50;
-            border: none;
-            color: white;
-            padding: 15px 32px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            margin: 4px 2px;
-            cursor: pointer;
-            border-radius: 10px;
-        }
-
-        .button:hover {
-            background-color: #45a049;
-        }
-    </style>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <style>
-        .button {
-            display: inline-block;
-            background-color: #4CAF50;
-            border: none;
-            color: white;
-            padding: 15px 32px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            margin: 4px 2px;
-            cursor: pointer;
-            border-radius: 10px;
-        }
-
-        .button:hover {
-            background-color: #45a049;
-        }
-    </style>
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
-    <div class="container">
-        <h1>Доска объявлений</h1>
-        {% if user.is_authenticated %}
-            <p>Добро пожаловать на доску объявлений, {{ user.username }}!</p>
-            <a href="{% url 'announcement-create' %}" class="button">Создать объявление</a>
-            <a href="{% url 'announcement-list' %}" class="button">Перейти к списку объявлений</a>
-            <a href="{% url 'response-list' %}" class="button">Мои отклики</a>
-            
-
-        {% else %}
-            <p>Пожалуйста, <a href="{% url 'account_signup' %}">зарегистрируйтесь</a>, чтобы создать объявление.</p>
-        {% endif %}
-    </div>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <header>
+        <div class="container">
+            <h1>Доска объявлений</h1>
+            {% if user.is_authenticated %}
+                <a href="{% url 'announcement-create' %}" class="main-button"><span>Создать объявление</span></a>
+                <a href="{% url 'announcement-list' %}" class="main-button"><i class="fa fa-bars"></i> Перейти к списку объявлений</a>
+                <a href="{% url 'response-list' %}" class="main-button">Мои отклики</a>
+                
+            {% else %}
+                <p>Пожалуйста, <a href="{% url 'account_signup' %}">зарегистрируйтесь</a>, чтобы создать объявление.</p>
+            {% endif %}
+        </div>
+    </header>
+    <p class="positioned">Добро пожаловать на доску объявлений, {{ user.username }}!</p>
 </body>
 </html>
